# se-toolkit-lab-7

./: .gitignore  README.md  docker-compose.yml
bot/: .dockerignore  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  intent_router.py
bot/handlers/commands/: __init__.py
bot/services/: __init__.py  llm_client.py  lms_api.py
frontend/: Dockerfile  package-lock.json
